Added Json Builder. Updated lever with support for defaults on get** functions